# python_lecture2

./: CONTRIBUTING.md  CONTRIBUTORS.md  LICENSE  README.md  pyproject.toml
docs/: Makefile  conf.py  index.rst  installation.rst  make.bat  usage.rst
docs/source/: modules.rst  python_lecture2.rst
python_lecture2/: python_lecture2.py
tests/: test_python_lecture2.py
